<resources>
    <string name="app_name">Reader</string>
    <string name="title">title</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="outOfRangRerror">Out Of Range.</string>
    <string name="illegalInput">Illegal Input.</string>
    <string name="dialog_reflow_settings_contrast">Contrast</string>
    <string name="contrast_level">Contrast Level</string>
    <string name="embolden">Embolden</string>
    <string name="embolden_level">Embolden Level</string>
    <string name="menu_item_smart_reflow">Reflow</string>
    <string name="menu_item_option_left">Option 1</string>
    <string name="menu_item_option_right">Option 2</string>
    <string name="dialog_reflow_settings_defect_size">Defect Size</string>
    <string name="dialog_reflow_settings_font_size">Font Size</string>
    <string name="dialog_reflow_settings_align">Align</string>
    <string name="dialog_reflow_settings_format">Format</string>
    <string name="dialog_reflow_settings_page_margins">Page margins</string>
    <string name="dialog_reflow_settings_line_spacing">Line Spacing</string>
    <string name="dialog_reflow_settings_word_spacing">Word Spacing</string>
    <string name="dialog_reflow_settings_render_size">Render Size</string>
    <string name="dialog_reflow_settings_auto_straighten">Straighten</string>
    <string name="dialog_reflow_settings_justification">Justification</string>
    <string name="dialog_reflow_settings_columns">Columns</string>
    <string name="dialog_reflow_settings_rotation">Rotation</string>
    <string name="dialog_reflow_settings_small">Small</string>
    <string name="dialog_reflow_settings_medium">Medium</string>
    <string name="dialog_reflow_settings_large">Large</string>
    <string name="dialog_reflow_settings_page_margins_small">Small</string>
    <string name="dialog_reflow_settings_page_margins_medium">Medium</string>
    <string name="dialog_reflow_settings_page_margins_large">Large</string>
    <string name="dialog_reflow_settings_render_small">Small</string>
    <string name="dialog_reflow_settings_render_medium">Medium</string>
    <string name="dialog_reflow_settings_render_large">Large</string>
    <string name="dialog_reflow_settings_render_largest">Largest</string>
    <string name="dialog_reflow_settings_justification_auto">Auto</string>
    <string name="dialog_reflow_settings_justification_left">Left</string>
    <string name="dialog_reflow_settings_justification_center">Center</string>
    <string name="dialog_reflow_settings_justification_right">Right</string>
    <string name="dialog_reflow_settings_justification_full">Full</string>
    <string name="dialog_reflow_settings_contrast_lightest">Lightest</string>
    <string name="dialog_reflow_settings_contrast_lighter">Lighter</string>
    <string name="dialog_reflow_settings_contrast_default">Default</string>
    <string name="dialog_reflow_settings_contrast_darker">Darker</string>
    <string name="dialog_reflow_settings_contrast_darkest">Darkest</string>
    <string name="go_to_page">Go To Page</string>
    <string name="dialog_crop_tittle">Crop</string>
    <string name="search_hint">Search</string>
    <string name="not_found">No Search Result</string>
    <string name="emptyselection">Empty Selection</string>
    <string name="loading_document">Loading Document</string>
    <string name="dialog_password_text_password">Password</string>
    <string name="dialog_password_set">Set</string>
    <string name="dialog_password_cancel">Cancel</string>
    <string name="Annotation">Annotation</string>
    <string name="Cancel">Cancel</string>
    <string name="add_annotation">Add</string>
    <string name="update">Update</string>
    <string name="dialog_dictionary_title">No Explanation</string>
    <string name="popup_selection_menu_page_indicator_default_value">1/1</string>
    <string name="Copy">Copy</string>
    <string name="Highlight">Highlight</string>
    <string name="Dictionary">Dictionary</string>
    <string name="popup_selection_menu_start_tts">TTS</string>
    <string name="toc">TOC</string>
    <string name="bookmark">Bookmark</string>
    <string name="annotation">Annotation</string>
    <string name="scribble">Scribble</string>
    <string name="navigation_mode">Navigation Mode</string>
    <string name="action_return">Return</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="page" formatted="false">page %d</string>
    <string name="crop">Crop</string>
    <string name="column">Column</string>
    <string name="direction">Direction</string>
    <string name="auto">Auto\n</string>
    <string name="six">Six</string>
    <string name="nine">Nine</string>
    <string name="single_page">Single\npage</string>
    <string name="settings_animation_key">setting_animation</string>
    <string name="settings_animation_tittle">Show animation During Zoom And Pan</string>
    <string name="settings_enable">Enabled</string>
    <string name="settings_disable">Disabled</string>
    <string name="settings_scribble_bar_show_reader_status_bar_key" translatable="false">setting_scribble_bar_show_reader_status_bar</string>
    <string name="settings_scribble_bar_show_reader_status_bar_tittle">Show Reader Status Bar In Scribble Mode</string>
    <string name="settings_show">Show</string>
    <string name="settings_hide">Hide</string>
    <string name="settings_key_binding_prev_page_key" translatable="false">prevPage</string>
    <string name="settings_key_binding_next_page_key" translatable="false">nextPage</string>
    <string name="settings_key_binding_prev_view_key" translatable="false">prevScreen</string>
    <string name="settings_key_binding_next_view_key" translatable="false">nextScreen</string>
    <string name="settings_key_binding_move_left_key" translatable="false">moveLeft</string>
    <string name="settings_key_binding_move_right_key" translatable="false">moveRight</string>
    <string name="settings_key_binding_move_up_key" translatable="false">moveUp</string>
    <string name="settings_key_binding_move_down_key" translatable="false">moveDown</string>
    <string name="settings_key_binding_increase_font_size_key" translatable="false">increaseFontSize</string>
    <string name="settings_key_binding_decrease_font_size_key" translatable="false">decreaseFontSize</string>
    <string name="settings_key_binding_prev_page_tittle">Prev Page</string>
    <string name="settings_key_binding_next_page_tittle">Next Page</string>
    <string name="settings_key_binding_prev_view_tittle">Prev View</string>
    <string name="settings_key_binding_next_view_tittle">Next View</string>
    <string name="settings_config_key_function">Set this key\'s function</string>
    <string name="settings_bookmark_key" translatable="false">show_bookmark</string>
    <string name="settings_bookmark_tittle">Show bookmark</string>
    <string name="settings_hyperlink_key" translatable="false">show_hyperlink</string>
    <string name="settings_hyperlink_tittle">Show hyperlink</string>
    <string name="settings_dithering_key" translatable="false">image_dithering</string>
    <string name="settings_dithering_tittle">Image dithering</string>
    <string name="settings_regal_mode_key" translatable="false">regal_mode</string>
    <string name="settings_regal_mode_tittle">Use regal mode</string>
    <string name="settings_show_annotation_key" translatable="false">setting_show_annotation_key</string>
    <string name="settings_show_annotation_title">Show annotation</string>
    <string name="settings_annotation_highlight_style_key" translatable="false">settings_annotation_highlight_style_key</string>
    <string name="settings_scribble_smooth_key" translatable="false">setting_scribble_smooth_key</string>
    <string name="settings_scribble_smooth_title">Smooth scribble</string>
    <string name="settings_scribble_base_width_key" translatable="false">settings_scribble_base_width_key</string>
    <string name="settings_scribble_base_width_summary">Set scribble minimum line width</string>
    <string name="settings_scribble_base_width_tittle">Set scribble minimum line width</string>
    <string name="settings_key_binding_move_up_tittle">Move Up</string>
    <string name="settings_key_binding_move_down_tittle">Move Down</string>
    <string name="settings_key_binding_move_left_tittle">Move Left</string>
    <string name="settings_key_binding_move_right_tittle">Move Right</string>
    <string name="settings_key_binding_increase_font_size_tittle">Increase Font Size</string>
    <string name="settings_key_binding_decrease_font_size_tittle">Decrease Font Size</string>
    <string name="settings_key_binding_reset_default_key" translatable="false">settings_key_binding_reset_default_key</string>
    <string name="settings_key_binding_reset_default">Reset Default Key Binding</string>
    <string name="settings_annotation_highlight_style_title">Annotation Style</string>
    <string name="setting_keycode_page_down_key" translatable="false">KEYCODE_PAGE_DOWN</string>
    <string name="setting_keycode_page_up_key" translatable="false">KEYCODE_PAGE_UP</string>
    <string name="setting_keycode_volume_down_key" translatable="false">KEYCODE_VOLUME_DOWN</string>
    <string name="setting_keycode_volume_up_key" translatable="false">KEYCODE_VOLUME_UP</string>
    <string name="setting_keycode_dpad_left_key" translatable="false">KEYCODE_DPAD_LEFT</string>
    <string name="setting_keycode_dpad_right_key" translatable="false">KEYCODE_DPAD_RIGHT</string>
    <string name="setting_keycode_dpad_up_key" translatable="false">KEYCODE_DPAD_UP</string>
    <string name="setting_keycode_dpad_down_key" translatable="false">KEYCODE_DPAD_DOWN</string>
    <string name="setting_keycode_dpad_center_key" translatable="false">KEYCODE_DPAD_CENTER</string>
    <string name="setting_keycode_clear_key" translatable="false">KEYCODE_CLEAR</string>
    <string name="setting_keycode_alt_left_key" translatable="false">KEYCODE_ALT_LEFT</string>
    <string name="setting_keycode_alt_right_key" translatable="false">KEYCODE_ALT_RIGHT</string>
    <string name="setting_keycode_button_start_key" translatable="false">KEYCODE_BUTTON_START</string>
    <string name="setting_keycode_page_down_title" >Next Page Button</string>
    <string name="setting_keycode_page_up_title" >Prev Page Button</string>
    <string name="setting_keycode_volume_down_title" >Volume Button Add</string>
    <string name="setting_keycode_volume_up_title" >Volume Button Reduce</string>
    <string name="setting_keycode_dpad_left_title" >Left Dpad Button</string>
    <string name="setting_keycode_dpad_right_title" >Right Dpad Button</string>
    <string name="setting_keycode_dpad_up_title" >Up Dpad Button</string>
    <string name="setting_keycode_dpad_down_title" >Down Dpad Button</string>
    <string name="setting_keycode_dpad_center_title" >Center Dpad Button</string>
    <string name="setting_keycode_clear_title" >Clear Button</string>
    <string name="setting_keycode_alt_left_title" >Alt Left Button</string>
    <string name="setting_keycode_alt_right_title" >Alt Right Button</string>
    <string name="setting_keycode_button_start_title" >Start Button</string>
    <string name="setting_touch_left_top_key" translatable="false">TOUCH_LEFT_TOP</string>
    <string name="setting_touch_left_bottom_key" translatable="false">TOUCH_LEFT_BOTTOM</string>
    <string name="setting_touch_right_top_key" translatable="false">TOUCH_RIGHT_TOP</string>
    <string name="setting_touch_right_bottom_key" translatable="false">TOUCH_RIGHT_BOTTOM</string>
    <string name="setting_touch_left_top_tittle">Left Top</string>
    <string name="setting_touch_left_bottom_tittle">Left Bottom</string>
    <string name="setting_touch_right_top_tittle">Right Top</string>
    <string name="setting_touch_right_bottom_tittle">Right Bottom</string>
</resources>