<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="reader_setting">
    <Preference
        android:key="@string/setting_keycode_page_down_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_page_down_title" />
    <Preference
        android:key="@string/setting_keycode_page_up_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_page_up_title" />
    <Preference
        android:key="@string/setting_keycode_volume_down_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_volume_down_title" />
    <Preference
        android:key="@string/setting_keycode_volume_up_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_volume_up_title" />
    <Preference
        android:key="@string/setting_keycode_dpad_left_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_dpad_left_title" />
    <Preference
        android:key="@string/setting_keycode_dpad_right_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_dpad_right_title" />
    <Preference
        android:key="@string/setting_keycode_dpad_up_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_dpad_up_title" />
    <Preference
        android:key="@string/setting_keycode_dpad_down_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_dpad_down_title" />
    <Preference
        android:key="@string/setting_keycode_dpad_center_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_dpad_center_title" />
    <Preference
        android:key="@string/setting_keycode_clear_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_clear_title" />
    <Preference
        android:key="@string/setting_keycode_alt_left_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_alt_left_title" />
    <Preference
        android:key="@string/setting_keycode_alt_right_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_alt_right_title" />
    <Preference
        android:key="@string/setting_keycode_button_start_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_config_key_function"
        android:title="@string/setting_keycode_button_start_title" />

    <Preference
        android:key="@string/settings_key_binding_reset_default_key"
        android:layout="@layout/settings_custom_preference_item"
        android:title="@string/settings_key_binding_reset_default" />
</PreferenceScreen>